--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=api
-spring.datasource.url=jdbc:mysql://localhost:3306/main?useSSL=false
-spring.datasource.username=user
-spring.datasource.password=P@ssword
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 logging.level.root=INFO
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
