--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,51 @@
-version: '3.8'  # Specify the version of Docker Compose
+version: '3.8'
 
-services:
-  mysql:
-    image: mysql:8.0  # MySQL image version 8.0
-    container_name: mysql_container  # Optional: Name for the container
-    restart: always  # Restart policy
+services: 
+  docker-mysql:
+    image: mysql:8.0
+    container_name: mysql_container
+    restart: always
+    command: --default-authentication-plugin=mysql_native_password
     ports:
-      - "3306:3306"  # Map port 3306 on the host to port 3306 on the container
+      - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: root  # Root password for MySQL
-      MYSQL_DATABASE: main  # Optional: Database to create on startup
-      MYSQL_USER: user  # Optional: Create a new user
-      MYSQL_PASSWORD: P@ssword  # Optional: Password for the new user
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=main
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=P@ssword
+      - MYSQL_HOST=localhost
+    healthcheck:
+      test: "/usr/bin/mysql --user=root --password=root --execute \"SHOW DATABASES;\""
+      interval: 4s
+      timeout: 20s
+      retries: 20
+    networks:
+      - backend
+
+  flyway:
+    image: boxfuse/flyway
+    command: -url=jdbc:mysql://docker-mysql:3306/main -schemas=main -user=user -password=P@ssword migrate
     volumes:
-      - mysql_data:/var/lib/mysql  # Mount a volume to persist data
+     - "./local-setup/sql:/flyway/sql"
+    depends_on:
+      docker-mysql:
+        condition: service_healthy
+    networks:
+      - backend
+  
+  spring-app:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      - MYSQL_URL=jdbc:mysql://docker-mysql:3306/main?useSSL=false
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=P@ssword
+    depends_on:
+      - docker-mysql
+    networks:
+      - backend
 
-volumes:
-  mysql_data:
-    driver: local  # Use local volume driver
-
-# Optionally, you can add more services or configurations as needed.
+networks:
+  backend:
+    driver: bridge
