--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -6,3 +6,4 @@ logging.level.root=INFO
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+management.endpoints.web.exposure.include=env
